--- a/about.css
+++ b/about.css
@@ -1,7 +1,6 @@
-#about{
-padding:30px;
-text-align:center;
-  background-color: #E5E3E3;
-  
-
-}
+#about
+{
+    padding:30px;
+    text-align:center;
+    background-color: #E5E3E3;
+  }
