--- a/src/about.css
+++ b/src/about.css
@@ -2,6 +2,6 @@
 {
     padding:30px;
     text-align:center;
-    background-color: #E5E3E3;
-    backface-visibility: hidden
+    backface-visibility: hidden;
+    background-color: aqua;
   }
